BUGFIX the dialogs were not centered on iOS Safari

--- a/src/components/edit/PermissionsEditor.module.css
+++ b/src/components/edit/PermissionsEditor.module.css
@@ -1,5 +1,4 @@
 .dialogsWrapper {
-  display: inline-block;
   position: relative;
   top: 50%;
   left: 50%;
