--- a/src/components/edit/SharingEditor.module.css
+++ b/src/components/edit/SharingEditor.module.css
@@ -1,5 +1,4 @@
 .dialog {
-  display: inline-block;
   position: relative;
   top: 50%;
   left: 50%;
